--- a/app/src/main/res/layout/study.xml
+++ b/app/src/main/res/layout/study.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical"
             android:layout_height="match_parent">
 
-            <cn.edu.scau.cmi.rgbstudy.ui.CustomizedSurfaceView
+            <cn.edu.scau.cmi.colorCheck.ui.CustomizedSurfaceView
                 android:visibility="gone"
                 android:id="@+id/collection_surface"
                 android:layout_width="200dp"
