--- a/app/src/main/res/layout/activity_collect_sample.xml
+++ b/app/src/main/res/layout/activity_collect_sample.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--样本采集-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -31,12 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 />
-
-
         </LinearLayout>
-
-
-
 
     </LinearLayout>
     <TextView
