--- a/app/src/main/res/layout/activity_sample_collect.xml
+++ b/app/src/main/res/layout/activity_sample_collect.xml
@@ -17,7 +17,7 @@
             android:orientation="vertical"
             android:layout_height="match_parent">
 
-            <cn.edu.scau.cmi.colorCheck.ui.CustomizedSurfaceView
+            <cn.edu.scau.cmi.colorCheck.view.PointSurfaceView
                 android:visibility="gone"
                 android:id="@+id/collection_surface"
                 android:layout_width="200dp"
