--- a/app/src/main/res/layout/content_picture_check_result.xml
+++ b/app/src/main/res/layout/content_picture_check_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.PictureCheckResultActivity"
+    tools:context=".activity.check.PictureCheckResultActivity"
     tools:showIn="@layout/activity_picture_check_result">
 
 </android.support.constraint.ConstraintLayout>
