--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <!--项目检测，像素点检测方法-->
+    <!--&lt;!&ndash;项目检测，像素点检测方法&ndash;&gt;
 
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
@@ -83,7 +83,7 @@
                     android:text="选择一个项目，指定规则，预测结果"/>
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>-->
 
 <!--基于图片的检查-->
 
@@ -126,7 +126,7 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <!--使用像素点采集样本-->
+   <!-- &lt;!&ndash;使用像素点采集样本&ndash;&gt;
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
         android:onClick="pointCollectData"
@@ -164,7 +164,7 @@
                     android:text="采集数据，用于学习生成规则"/>
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>-->
     <!--使用图片采集样本-->
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
@@ -206,7 +206,7 @@
     </android.support.v7.widget.CardView>
 
 <!--人工生成规则-->
-    <android.support.v7.widget.CardView
+    <!--<android.support.v7.widget.CardView
         android:layout_margin="5dp"
         android:onClick="customizeRule"
         android:layout_width="match_parent"
@@ -244,10 +244,10 @@
                     android:text="查看项目采集的样本数据，可选择生成规则"/>
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>-->
 
     <!--机器学习生成规则-->
-    <android.support.v7.widget.CardView
+    <!--<android.support.v7.widget.CardView
         android:layout_margin="5dp"
         android:onClick="machineLearnRule"
         android:layout_width="match_parent"
@@ -288,7 +288,54 @@
                     android:text="查看项目采集的样本数据，并利用机器学习生成相应的规则" />
             </LinearLayout>
         </LinearLayout>
+    </android.support.v7.widget.CardView>-->
+
+
+    <!--机器学习生成规则-->
+    <android.support.v7.widget.CardView
+        android:layout_margin="5dp"
+        android:onClick="testJsonDataFromWeb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="5dp"
+        app:cardBackgroundColor="#fff">
+
+        <LinearLayout
+            android:layout_width="354dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <LinearLayout
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="测试数据异步采集"
+                    android:textColor="#000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="查看项目采集的样本数据，并利用机器学习生成相应的规则" />
+            </LinearLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
 
 
     <!--使用说明-->
@@ -331,6 +378,14 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
 
 
 </LinearLayout>
