--- a/app/src/main/res/layout/activity_picture_check.xml
+++ b/app/src/main/res/layout/activity_picture_check.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <cn.edu.scau.cmi.colorCheck.view.PictureSurfaceView
+        <cn.edu.scau.cmi.colorCheck.view.CameraPictureSurfaceView
             android:id="@+id/picture_check_surface"
             android:layout_gravity="center"
             android:layout_width="200dp"
@@ -43,7 +43,7 @@
             <Spinner
                 android:ellipsize="marquee"
                 android:spinnerMode="dialog"
-                android:id="@+id/check_project"
+                android:id="@+id/picture_check_project"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </Spinner>
