(1) understand asyncTask, and use it to update UI successfully. (2) modify code later;

--- a/app/src/main/res/layout/activity_picture_check.xml
+++ b/app/src/main/res/layout/activity_picture_check.xml
@@ -81,6 +81,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/picture_check_random"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
     <!--&lt;!&ndash;结果部分&ndash;&gt;
     <LinearLayout
         android:background="#fff"
