(1) spinner can get data correctly;

--- a/app/src/main/res/layout/activity_picture_check.xml
+++ b/app/src/main/res/layout/activity_picture_check.xml
@@ -73,7 +73,7 @@
             <Spinner
                 android:ellipsize="marquee"
                 android:spinnerMode="dialog"
-                android:id="@+id/check_rule"
+                android:id="@+id/picture_check_rule_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
