--- a/app/src/main/res/layout/activity_picture_check_result.xml
+++ b/app/src/main/res/layout/activity_picture_check_result.xml
@@ -10,21 +10,20 @@
         android:layout_height="300dp"
         android:id="@+id/frameLayoutCheckResult"
         android:background="#FF0088">
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:text="framelayout中的内容"/>
     </FrameLayout>
-    <EditText
+    <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="300dp"
-        android:text="测试"/>
-    <android.support.v7.widget.AppCompatAutoCompleteTextView
-        android:id="@+id/resultTextView"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="#FF00FF"
-        android:text="结果"
-        android:layout_marginTop="400dp"/>
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/resultTextView"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="400dp"
+            android:background="#FFFFFF"
+            android:text="结果" />
+
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
+
 </android.support.design.widget.CoordinatorLayout>
