--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -206,7 +206,7 @@
     </android.support.v7.widget.CardView>
 
 <!--人工生成规则-->
-    <!--<android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView
         android:layout_margin="5dp"
         android:onClick="customizeRule"
         android:layout_width="match_parent"
@@ -244,10 +244,10 @@
                     android:text="查看项目采集的样本数据，可选择生成规则"/>
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>-->
+    </android.support.v7.widget.CardView>
 
     <!--机器学习生成规则-->
-    <!--<android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView
         android:layout_margin="5dp"
         android:onClick="machineLearnRule"
         android:layout_width="match_parent"
@@ -288,7 +288,7 @@
                     android:text="查看项目采集的样本数据，并利用机器学习生成相应的规则" />
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>-->
+    </android.support.v7.widget.CardView>
 
 
     <!--机器学习生成规则-->
@@ -322,7 +322,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="测试数据异步采集"
+                    android:text="测试网络或者服务器是否连通"
                     android:textColor="#000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -385,7 +385,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="" />
 
 
 </LinearLayout>
