--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="#eae5e5">
 <!--查看所有的项目-->
     <android.support.v7.widget.CardView
-        android:onClick="onListProjects"
+        android:onClick="onProjectManage"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
