--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
-        android:onClick="pictureCheck"
+        android:onClick="onProjectManage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
