(1) ready to fix check function;

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
-        android:onClick="onProjectManage"
+        android:onClick="onPictureCheck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
@@ -106,7 +106,6 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
             <LinearLayout
-
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_weight="4"
