(1) pictureCheckResultActivity UI redesign; (2) CheckAsyncTask can return to PictureCheckResultActivity and redraw view; (3) in AsyncTask, postInvalidation can redraw view on activity.

--- a/app/src/main/res/layout/activity_picture_check_result.xml
+++ b/app/src/main/res/layout/activity_picture_check_result.xml
@@ -16,11 +16,11 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/resultTextView"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
             android:layout_marginTop="400dp"
             android:background="#FFFFFF"
-            android:text="结果" />
+            android:text="@string/check_result" />
 
 
     </android.support.v7.widget.LinearLayoutCompat>
