--- a/app/src/main/res/layout/content_picture_sample_collect.xml
+++ b/app/src/main/res/layout/content_picture_sample_collect.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.collect.PictureSampleCollectActivity"
+    tools:context=".olderVersion.PictureSampleCollectActivity"
     tools:showIn="@layout/activity_picture_sample_collect">
 
 </android.support.constraint.ConstraintLayout>
