--- a/app/src/main/res/layout/activity_picture_check.xml
+++ b/app/src/main/res/layout/activity_picture_check.xml
@@ -79,19 +79,62 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <!--检测规则部分-->
+    <LinearLayout
+        android:id="@+id/sample_result"
+        android:background="#fff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_margin="5dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="15sp"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="样本结果："/>
+
+            <EditText
+                android:id="@+id/editTextSampleResult"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="请输入检测到样本的结果" />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+
+
 <!--测试从后台获取数据-->
     <!--<TextView
         android:id="@+id/picture_check_project_asyncTask_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />-->
-
+<!--已经通过异步服务获取了项目和规则，现在不需要了-->
+<!--
     <Button
         android:id="@+id/picture_check_gain_data_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="获取存在的检测项目和规则"
         android:onClick="onPictureCheckGainData"/>
+-->
 
     <Button
         android:id="@+id/picture_check_upload_bitmap_button"
