--- a/app/src/main/res/layout/activity_picture_check.xml
+++ b/app/src/main/res/layout/activity_picture_check.xml
@@ -81,7 +81,7 @@
     </LinearLayout>
 
     <!--检测规则部分-->
-    <LinearLayout
+<!--    <LinearLayout
         android:id="@+id/sample_result"
         android:background="#fff"
         android:layout_width="match_parent"
@@ -113,7 +113,7 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 
 
@@ -136,29 +136,29 @@
         android:onClick="onPictureCheckGainData"/>
 -->
 
-    <Button
+<!--    <Button
         android:id="@+id/picture_check_upload_bitmap_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="上传刚才拍摄的图片"
-        android:onClick="onUploadPictureCheckBitMap"/>
+        android:onClick="onUploadPictureCheckBitMap"/>-->
 
-    <Button
+ <!--   <Button
         android:id="@+id/picture_check_show_result_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="显示检测结果"
-        android:onClick="onShowPictureCheckResult"/>
+        android:onClick="onShowPictureCheckResult"/>-->
 
 
 
 
-    <Button
+<!--    <Button
         android:id="@+id/picture_check_upload_all_bitmap_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="上传本机所有的检测图片，用于规则学习"
-        android:onClick="onUploadAllPictureCheckBitMapFile"/>
+        android:onClick="onUploadAllPictureCheckBitMapFile"/>-->
 
     <!--&lt;!&ndash;结果部分&ndash;&gt;
     <LinearLayout
